Aggiunto componente lista dischi con relativa chiamata APi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,9 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<nav>
-  <ol>
+<nav class="container">
+  <ul class="d-flex flex-direction-row justify-content-center">
     <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/employees-list">Dashboard</a></li>
     <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/create-employee">Crea</a></li>
-    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/"></a></li>
-  </ol>
+    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/disk-list">Lista album</a></li>
+  </ul>
 </nav>
+
 <router-outlet></router-outlet>
