--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'app/app.component.scss';
+@import 'app/disk-list/disk-list.component.scss';
+@import 'app/employee-create/employee-create.component.scss';
+@import 'app/employee-edit/employee-edit.component.scss';
+@import 'app/employee-list/employee-list.component.scss';
