--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,36 @@
-.active{
-    border-bottom: 2px solid red;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    box-sizing: border-box;
 }
+
+body {
+  color: azure!important;
+  background: #1E2D3B;
+  min-height: 100vh;
+}
+nav{
+    .active {
+      border-radius: 18px;
+      background-color: #29619640;
+      filter: drop-shadow(2px 4px 6px rgb(3, 30, 88));
+        box-shadow: inset 0px 0px 15px 4px #1f2d3b;
+    }
+    ul{
+        li{
+            list-style: none;
+            width: 15%;
+            padding-bottom: 5px;
+            display: flex;
+            justify-content: center;
+            
+            a.btn{
+                padding: 5px 10px;
+                margin: 10px 0;
+            }
+        }
+    }
+}
+.container {margin:auto;}
+.btn{filter: drop-shadow(2px 4px 6px #1e1e1e);}
