--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="container">
-  <ul class="d-flex flex-direction-row justify-content-center">
-    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/employees-list">Dashboard</a></li>
-    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/create-employee">Crea</a></li>
+  <ul class="d-flex flex-direction-row justify-content-around">
+    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/create-employee">Crea nuovo impiegato</a></li>
+    <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/employees-list">Lista impiegati</a></li>
     <li routerLinkActive="active"><a class="btn btn-primary" routerLink="/disk-list">Lista album</a></li>
   </ul>
 </nav>
