--- a/src/app/disk-list/disk-list.component.html
+++ b/src/app/disk-list/disk-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="cds_container container d-flex justify-content-center align-items-center flex-wrap">
-        <ol class="d-flex flex-direction-row flex-wrap justify-content-space-around">
+        <ol class="d-flex flex-direction-row flex-wrap justify-content-around">
             <li class="cd d-flex justify-content-flex-start align-items-center flex-column" *ngFor="let disk of Disk">
                 <img src="{{disk.poster}}" alt="">
                 <h3>{{disk.title}}</h3>
